build/log/idf_py_stdout_output_21404
[1/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj 
ccache F:\esp-idfl\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IG:/idfzk/build/config -IG:/idfzk/main -IF:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32s3/. -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/wifi_apps/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/wifi_apps/nan_app/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/include/local -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_event/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_phy/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_phy/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_netif/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/nvs_flash/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/spi_flash/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_partition/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/json/cJSON -IF:/Espressif/frameworks/esp-idf-v5.3/components/spiffs/include -IG:/idfzk/components/ssd1306 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_spi/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_pm/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_i2c/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=G:/idfzk=. -fmacro-prefix-map=F:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\idfzk.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj -c G:/idfzk/main/idfzk.c
G:/idfzk/main/idfzk.c: In function 'wifi_start_smartconfig':
G:/idfzk/main/idfzk.c:1058:8: error: 'smartconfig_start_config_t' has no member named 'smartconfig_type'
 1058 |     cfg.smartconfig_type = SC_TYPE_ESPTOUCH_AIRKISS;
      |        ^
ninja: build stopped: subcommand failed.
